<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bacolor"
    tools:context=".My_Activity_03"


    >



    <ImageView
        android:id="@+id/image"
        android:layout_width="320dp"
        android:layout_height="160dp"
        android:scaleType="fitXY"
        android:src="@drawable/san1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:background="@color/textcolor"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/san_zi1"

        />


    <RelativeLayout
        android:id="@+id/rela"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_marginTop="2dp"
        android:background="@color/textcolor"
        android:padding="5dp"

        >

        <TextView

            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/san_zi2"
            android:textSize="15sp"
            android:textColor="@color/red" />

        <TextView

            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_toRightOf="@id/textView2"
            android:text="@string/san_zi3"
            android:textSize="15sp"
            />
        <TextView

            android:id="@+id/textVie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:text="@string/san_zi"
            android:textSize="15sp"
            />
        <TextView

            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textVie"
            android:layout_marginTop="5dp"
            android:text="@string/san_zi4"
            android:textSize="15sp"
            />

        <TextView

            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textView3"
            android:layout_below="@id/textView3"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/textView4"
            android:text="@string/san_zi5"
            android:textSize="15sp"

            android:textColor="@color/red" />

        <TextView

            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:text="@string/san_zi6" />

        <TextView

            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/textView3"
            android:layout_below="@id/textView5"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/textView4"
            android:text="@string/san_zi7"
            android:textSize="15sp"
            android:textColor="@color/red" />
    </RelativeLayout>

    <Button
        android:layout_marginTop="7dp"
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_left_reduis_03"
        android:text="@string/san_zi8"
        android:textColor="@color/textcolor"
        android:layout_below="@id/rela"
        android:layout_marginLeft="10dp"
        android:textSize="20sp" />

    <Button
        android:layout_marginTop="7dp"
        android:id="@+id/button2tt"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button1"
        android:background="@drawable/button_right_riduis_03"
        android:text="@string/san_zi9"
        android:layout_below="@id/rela"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/rela2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:background="@color/textcolor">



        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_zi1"
            android:padding="5dp"
            android:textSize="15sp"
            android:textColor="@color/butTextColor"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text1"
            android:text="@string/but_zi2"
            android:textSize="15sp"
            android:padding="5dp"
            android:layout_marginTop="3dp"
            />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:text="@string/but_zi3"
            android:padding="5dp"
            android:textSize="15sp"
            android:textColor="@color/butTextColor"
            />

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:layout_toRightOf="@id/text1"
            android:text="@string/but_zi4"
            android:padding="5dp"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text3"
            android:text="@string/but_zi5"
            android:padding="5dp"
            android:textColor="@color/butTextColor"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text4"
            android:layout_toRightOf="@id/text1"
            android:text="@string/but_zi6"
            android:padding="5dp"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/text7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text5"
            android:text="@string/but_zi7"
            android:padding="5dp"
            android:textColor="@color/butTextColor"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/text8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text6"
            android:layout_toRightOf="@id/text1"
            android:text="@string/but_zi8"
            android:padding="5dp"
            android:textSize="15sp"
            />
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/rela2"
        android:background="@color/butColor"
        android:text="@string/xia"
        android:textColor="@color/textcolor"
        android:textSize="25sp"
        android:layout_marginTop="15dp"

        />

</RelativeLayout>
